--- a/src/styles.scss
+++ b/src/styles.scss
@@ -10,8 +10,8 @@ body {
 
     .app-container {
         display: flex;
-        width: 100dvw;
-        height: 100dvh;
+        width: 100svw;
+        height: 100svh;
         align-items: center;
         justify-content: center;
     }
